# nike-cch-workflow-orchestrator

./: .gitignore  CONTEXT.md  DELIVERABLES_SUMMARY.md  ENHANCED_ERROR_MANAGEMENT_DESIGN.md  ENHANCED_ERROR_MANAGEMENT_IMPLEMENTATION_SUMMARY.md  HANDOVER.md  Jenkinsfile  PLANNING.md  README.md  TYPESCRIPT_LANGGRAPH_FEASIBILITY_STUDY.md  WORKFLOW_SCHEMA_VALIDATION_REPORT.md  WORKFLOW_TESTING_AND_GRAPHQL_GUIDE.md  build.Dockerfile  pytest.ini  state_refactoring.md  wizRules.json
cdk/: aws-profile-config-example.md  cdk-with-env.sh  package-lock.json
cdk/examples/: grant-external-lambda-access.ts  (+1 more)
sample-data/: consignment.json  delivery-sample.json
tests/: __init__.py  conftest.py  requirements.txt  test_enhanced_error_management.py  test_hitl_error_handling_workflow.py  test_idempotency_guard_clause.py  test_merged_simplified_workflow.py  test_simplified_import_workflow.py  test_workflow_schema_validation.py
workflow-definitions/: import_us_v1.1.1-full.yaml  import_us_v1.1.1-simplified-errorhandling.yaml  import_us_v1.1.1-simplified.yaml  import_us_v1.1.1.yaml  import_us_v1.yaml  trivial_workflow.yaml
workflow-orchestrator/src/lib/langgraph_checkpoint_dynamodb/: .gitignore  LICENSE  MANIFEST.in  README.md  pyproject.toml
workflow-orchestrator/src/lib/langgraph_checkpoint_dynamodb/langgraph_checkpoint_dynamodb/: __init__.py  config.py  constants.py  errors.py  requirements-dev.txt  requirements.txt  saver.py  template.yaml  utils.py
workflow-orchestrator/src/lib/langgraph_checkpoint_dynamodb/langgraph_checkpoint_dynamodb/infra/: __init__.py  checkpoint_stack.py
(+127 files in other folders)
